--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <title>Vite + React</title>
   </head>
   <body>
@@ -16,3 +17,9 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+<script>
+  // fetch('https://api.nlsc.gov.tw/other/ListCounty')
+  //   .then((res)=>{
+  //     console.log(res)
+  //   })
+</script>
