--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
-    <!-- <img src="https://upload.cc/i1/2019/11/11/6AePOc.png" alt=""> -->
 
     <title>Vite + React</title>
   </head>
@@ -21,9 +19,4 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
-<script>
-  // fetch('https://api.nlsc.gov.tw/other/ListCounty')
-  //   .then((res)=>{
-  //     console.log(res)
-  //   })
-</script>
+<script></script>
